--- a/index.html
+++ b/index.html
@@ -3,8 +3,163 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>CV Konstantin Rubenkov</title>
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header class="header">
+    <div class="container header__container">
+      <nav class="header__nav">
+        <ul class="header__nav-list">
+          <li class="nav__list-item">
+            <a class="nav__item-link" href="index.html#contacts">Contacts</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="nav__item-link" href="index.html#about">About Me</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="nav__item-link" href="index.html#skills">Skills</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="nav__item-link" href="index.html#code">Code Example</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="nav__item-link" href="index.html#experience">Experience</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="nav__item-link" href="index.html#eduction">Education</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="nav__item-link" href="index.html#works">Work Examples</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="main">
+    <div class="container main__container">
+      <div class="main__left">
+        <figure class="main__photo-container">
+          <img class="main__photo-img" width="380" height="507" src="img/IMG_20240615_145255.jpg" alt="photo Konstantin Rubenkov">
+        </figure>
+        <section class="main__contacts" id="contacts">
+          <h2 class="main__contacts-title">Contact Me</h2>
+          <ul class="main__contacts-list">
+            <li class="main__contacts-item">Discord: prozapas_s3342</li>
+            <li class="main__contacts-item">VK:
+              <a class="main__contacts-link" href="https://vk.com/hidemotion">Konstantin Rubenkov</a>
+            </li>
+            <li class="main__contacts-item">Email:
+              <a class="main__contacts-link" href="mailto:amarant2202@gmail.com">amarant2202@gmail.com</a>
+            </li>
+          </ul>
+        </section>
+        <section class="main__skills" id="skills">
+          <h2 class="main__skills-title">Skills</h2>
+          <ul class="main__skills-list">
+            <li class="main__skills-item">HTML5</li>
+            <li class="main__skills-item">JavaScript (Basic)</li>
+            <li class="main__skills-item">Git</li>
+          </ul>
+        </section>
+        <section class="main__work" id="works">
+          <h2 class="main__work-title">Work Examples</h2>
+          <ul class="main__work-list">
+            <li class="main__work-item">
+              <a class="main__work-link" href="https://apkoha.github.io/eklerno_2024/">Project Eclerno_2024</a>
+            </li>
+            <li class="main__work-item">
+              <a class="main__work-link" href="https://apkoha.github.io/You-Tvideo_intensive2023/">Project You-Tvideo_2023</a>
+            </li>
+            <li class="main__work-item">
+              <a class="main__work-link" href="https://apkoha.github.io/maketBikePark/">Project BikePark_2021</a>
+            </li>
+          </ul>
+        </section>
+      </div>
+      <div class="main__right">
+        <section class="right__main-info">
+          <div class="main__info-container">
+            <h1 class="main__info-title">Konstantin Rubenkov</h1>
+            <p class="main__info-text">System Administrator</p>
+          </div>
+        </section>
+        <section class="main__about" id="about">
+          <h2 class="about__title">About Me</h2>
+          <p class="about__text">I am currently a system administrator. I want to learn frontend to become a developer. I love going to concerts and listening to heavy music. In my free time I watch videos about history. I can repair electronics, printers, mobile phones and much more.</p>
+        </section>  
+        <section class="main__education" id="eduction">
+          <h2 class="main__education-title">Courses</h2>
+          <ul class="main__education-list">
+            <li class="main__education-item">
+              <a class="main__education-link" href="https://htmlacademy.ru/">HTML Academy</a>
+            </li>
+            <li class="main__education-item">
+              <a class="main__education-link" href="https://methed.ru/">METHED online method eduction system</a>
+            </li>
+            <li class="main__education-item">
+              <a class="main__education-link" href="https://rs.school/">RS School JS/FE Pre-School 2024Q2</a>
+            </li>
+          </ul>
+        </section>
+        <section class="main__experience" id="experience">
+          <h2 class="main__experience-title">Experience</h2>
+          <p class="main__experience-text">My best work at the moment is the layout of a website selling eclairs.</p>
+          <p class="main__experience-text main__experience-text--decoration">See page via link:
+            <a class="main__experience-link" href="https://apkoha.github.io/eklerno_2024/">Project Eclerno_2024</a>
+          </p>
+          <a class="main__experience-sublink" href="https://apkoha.github.io/eklerno_2024/">
+            <img class="main__experience-img" width="1061" height="621" src="img/preview_eclerno.jpg" alt="preview page eclerno_2024">
+          </a>
+        </section>
+        <section class="main__code" id="code">
+          <h2 class="main__code-title">Code example</h2>
+          <pre class="main__code-container">
+            <code class="main__code-inner" >
+    const sortFromHighToLow = (arr) => {
+      arr.sort(function (a, b) {
+        if (a.value &lt; b.value) {
+          return 1;
+        }
+      
+        if (a.value &gt; b.value) {
+          return -1;
+         }
+       
+        return 0;
+      });
+    };
+            </code>
+          </pre>
+        </section>
+        <section class="main__languages">
+          <h2 class="main__languages-title">Languages</h2>
+          <p class="main__languages-text">Russian C2</p>
+          <p class="main__languages-text">English A2</p>
+        </section>
+      </div>
+    </div>
+  </main>
+  <footer class="footer">
+    <div class="container footer__container">
+      <nav class="footer__nav">
+        <ul class="footer__nav-list">
+          <li class="footer__list-item">
+            <a class="footer__list-link" href="https://github.com/apkoha">My GitHub</a>
+          </li>
+          <li class="footer__list-item">
+            <a class="footer__list-link" href="https://rs.school/courses/javascript-ru">
+              <img class="footer__link-img" src="img/rs_school_js.svg" width="86" height="32" alt="RS School logo">
+            </a>
+          </li>
+          <li class="footer__list-item">
+            <a class="footer__list-link" href="https://www.youtube.com/channel/UCMmjVkM1KEAkBOvbTxLcCwA">My YouTube</a>
+          </li>
+          <li class="footer__list-item">2024</li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
 </body>
 </html>
